--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "config": "^3.3.8",
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2"
   },
   "devDependencies": {
